# warned-rs

./: Cargo.toml  README.md
.github/workflows/: publish-without-bump.yml
src/: lib.rs
