[package]
name = "warned"
version = "0.1.0"
edition = "2021"
authors = ["Yuichiro Terada <terada.yuichiro@gmail.com>"]
repository = "https://github.com/u1roh/warned-rs"
documentation = "https://docs.rs/warned"
keywords = ["warning", "result", "error"]
readme = "README.md"
description = "struct Warned<T, W> { value: T, warnings: Vec<W> }, which represents a value with warnings."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
